Overhauled everything. Lombok, cleanup, etc.